--- a/charts/amazon-network-policy-controller-k8s/crds/crds.yaml
+++ b/charts/amazon-network-policy-controller-k8s/crds/crds.yaml
@@ -130,6 +130,12 @@ spec:
                 type: array
               isGlobal:
                 type: boolean
+              namespaces:
+                description: Namespaces of the pod selector, will be empty for cluster
+                  wide
+                items:
+                  type: string
+                type: array
               podIsolation:
                 description: PodIsolation specifies whether the pod needs to be isolated
                   for a particular traffic direction Ingress or Egress, or both. If
@@ -233,6 +239,7 @@ spec:
                 type: integer
             required:
             - isGlobal
+            - namespaces
             - policyRef
             - priority
             type: object
